# retrieve-height-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  get_data.sh  run.py
app/: Decorator_HTTP_Access_Control.py  GetData.py  __init__.py
backend/: Dockerfile  pyproject.toml  requirement-GDAL.txt  requirement.txt  run.py
backend/app/: Decorator_HTTP_Access_Control.py  GetData.py  __init__.py
backend/data/: README.md  get_data.sh
backend/test/: TestGetHighestElevationNearby.py
backend/webapp/: GetHeight.py  GetHighestElevationNearby.py  __init__.py
data/: README.md  data_list.txt  data_list_2018-01-09.txt  get_data.sh
documentation/: rastervsgdal_output.txt  requirement.txt  retrieve elevation CAA 07042015.odt
documentation/pylint/: GetData_pylint.txt  GetHeight_pylint.txt  GetHighestElevationNearby_pylint.txt
test/: README.md  TestBase.py  TestGetHeight.py  TestGetHighestElevationNearby.py  __init__.py
webapp/: GetHeight.py  GetHighestElevationNearby.py  __init__.py
