[tool.poetry]
name = "retrieve-height-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
GDAL = "3.1.3"
Flask = "^1.1.2"
Jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.6"
Werkzeug = "^1.0.1"
Flask-Testing = "^0.8.0"
numpy = "^1.19.2"
raven = {extras = ["flask"], version = "^6.10.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
